methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  
  //var vuBaggle:Boolean = false
  
  var nbPas = 0
  
  for (i <- 1 to 6) {
    
    for (k <- 1 to 6) {
      
      avance();
      nbPas = nbPas + 1
      
      if (estSurBiscuit()) {
        
        //vuBaggle = true
        return true
        
      }
      
    }
  
    
  	for (i <- 1 to nbPas) {
    
    	recule();
      
    
		droite();
    avance();
    gauche();
      
    }
    
  //return vuBaggle
    return false
  
  }
  
}